refactor: remove comments, update readme and reorganization

--- a/cssProjects/PushButton/PB.css
+++ b/cssProjects/PushButton/PB.css
@@ -22,8 +22,8 @@ body{
 }
 .Pulsar::before, .Pulsar::after {
   content: '';
-  display: block; /*To do the element apear*/
-  position: absolute; /*To drop the new element relative the referenced element. It's the why of the position relative.*/
+  display: block;
+  position: absolute;
   border: 2px solid #1b9b4a;
   border-radius: 50%;
   top: -35px;
@@ -37,12 +37,11 @@ body{
 @keyframes animação {
   0% {
     transform:scale(0.5);
-    /* opacity: 0; para aparecer a partir do transparente */
   }
   50% {
-    opacity: 1; /*aparece*/
+    opacity: 1;
   }
   100% {
-    opacity: 0; /*desaparece*/
+    opacity: 0;
   }
 }
